--- a/css/style.css
+++ b/css/style.css
@@ -1,57 +1,5 @@
-
-Header{
-    background-color: rgb(237, 247, 224);
-    text-align: center;
-    padding: 20px;
-}
-
-body {
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-color: rgb(237, 247, 224);
-    margin: 0;
-    padding: 0;
-}
-
-p{
-    display: flex;
-    width: 1;
-    margin: 10px;
-    padding: 10px;
-    text-align: center;
-}
-.wrapper{
-    background-color: rgb(203, 219, 179);
-    
-}
-.wrap{
-    display: flex;
-    width: 1;
-    padding: 20px;
-    border-radius: 10px;
-    background-color: #f4f4f4;
-}
-.wrap:hover{
-    transform: translateY(-3px);
-}
-
-nav{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-nav ul{
-    list-style: none;
-    display: flex;
-    gap: 50px;
-}
-
-nav a{
-    text-decoration: none;
-    color:black
-}
-
-nav a:hover{
-    color: #6C757D;
+.nav-wrapper{
+    background-color: rgb(182, 176, 176);
 }
 
 
