--- a/css/site-nav.css
+++ b/css/site-nav.css
@@ -3,12 +3,11 @@ nav {
     align-items: center;
     justify-content: space-between;
 
-    padding: 10px 14px;
+    padding: 12px 10px;
     margin: 0px auto;
-    background-color: rgba(206, 200, 200, 0.46);
-    border-radius: 12px;
-
-    max-width: 900px;
+    background-color: rgba(206, 206, 206, 0.301);
+    border-radius: 0px 0px 15px 15px;
+    max-width: 1500px;
     margin-left: auto;
     margin-right: auto;
 
@@ -20,24 +19,33 @@ button{
     padding: 0;
     margin: 0;
 
-    font: inherit;
+    font-weight: bold;
+    font-family: inherit;
+    font-size: small;
     color: inherit;
     cursor: pointer;
 }
 
 .left-bar{
+    display: flex;
     align-items: center;
+    margin:0;
     gap: 10px;
+    padding:0;
+}
+
+.date{
+    font-size: small;
 }
 
 .logo-control {
-    width: 5em;
+    width: 4em;
 }
 
 .right-bar ul {
     display: flex;
-    gap: 10px;
-    margin: 0;
+    gap: 20px;
+    margin: auto;
     padding: 0;
 
 }
@@ -47,6 +55,47 @@ button{
 }
 
 .right-bar a {
+    font-size: small;
     text-decoration: none;
     color: inherit;
+
+    transition-duration: 10ms;
+    
 }
+
+/* Flip container */
+.flip{
+  display: inline-block;
+  perspective: 800px;
+  text-decoration: none;
+  color: inherit;
+}
+
+/* The flipping element */
+.flip-inner{
+  position: relative;
+  display: inline-block;
+  transform-style: preserve-3d;
+  transition: transform 0.5s ease;
+}
+
+/* Trigger on hover */
+.flip:hover .flip-inner{
+  transform: rotateX(180deg); /* use rotateY for horizontal flip */
+}
+
+/* Faces */
+.flip-face{
+  display: inline-block;
+  backface-visibility: hidden;
+}
+
+/* Back face */
+.flip-back{
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: rotateX(180deg);
+}
+
+
