--- a/css/site-nav.css
+++ b/css/site-nav.css
@@ -1,70 +1,78 @@
 nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
-    padding: 12px 10px;
-    margin: 0px auto;
-    background-color: rgba(206, 206, 206, 0.301);
-    border-radius: 0px 0px 15px 15px;
-    max-width: 1500px;
-    margin-left: auto;
-    margin-right: auto;
+  padding: 15px 10px;
+  margin: 0px auto;
+  background-color: rgba(206, 206, 206, 0.301);
+  border-radius: 0px 0px 15px 15px;
+  max-width: 1500px;
+  margin-left: auto;
+  margin-right: auto;
 
 }
 
-button{
-    background: none;
-    border: none;
-    padding: 0;
-    margin: 0;
+button {
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
 
-    font-weight: bold;
-    font-family: inherit;
-    font-size: small;
-    color: inherit;
-    cursor: pointer;
+  font-weight: bold;
+  font-family: inherit;
+  font-size: small;
+  color: inherit;
+  cursor: pointer;
 }
 
-.left-bar{
-    display: flex;
-    align-items: center;
-    margin:0;
-    gap: 10px;
-    padding:0;
+.container {
+  border: black;
 }
 
-.date{
-    font-size: small;
+.left-bar {
+  display: flex;
+  align-items: center;
+  margin: 0;
+  gap: 10px;
+  padding: 0;
+}
+
+.date {
+  font-size: small;
 }
 
 .logo-control {
-    width: 4em;
+  width: 4em;
 }
 
 .right-bar ul {
-    display: flex;
-    gap: 20px;
-    margin: auto;
-    padding: 0;
+  display: flex;
+  gap: 20px;
+  margin: auto;
+  padding: 0;
 
 }
 
 .right-bar li {
-    list-style: none;
+  list-style: none;
 }
 
 .right-bar a {
-    font-size: small;
-    text-decoration: none;
-    color: inherit;
+  font-size: small;
+  text-decoration: none;
+  color: inherit;
 
-    transition-duration: 10ms;
-    
+  transition-duration: 10ms;
+
+}
+
+.flip span {
+  border-bottom: 10px;
 }
 
 /* Flip container */
-.flip{
+.flip {
   display: inline-block;
   perspective: 800px;
   text-decoration: none;
@@ -72,7 +80,7 @@ button{
 }
 
 /* The flipping element */
-.flip-inner{
+.flip-inner {
   position: relative;
   display: inline-block;
   transform-style: preserve-3d;
@@ -80,22 +88,24 @@ button{
 }
 
 /* Trigger on hover */
-.flip:hover .flip-inner{
-  transform: rotateX(180deg); /* use rotateY for horizontal flip */
+.flip:hover .flip-inner {
+  transform: rotateX(180deg);
+  /* use rotateY for horizontal flip */
 }
 
 /* Faces */
-.flip-face{
+.flip-face {
   display: inline-block;
   backface-visibility: hidden;
 }
 
 /* Back face */
-.flip-back{
+.flip-back {
   position: absolute;
   top: 0;
   left: 0;
   transform: rotateX(180deg);
 }
+
 
 
